--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
 html,
 body {
+  background-color: var(--background);
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+html {
+  background-color: var(--background);
 }
 
 a {
@@ -13,4 +18,24 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --text-primary: #1b1b1b;
+    --text-secondary: #808080;
+    --background: #ffffff;
+    --divider: #d9d9d9;
+    --text-link: blue;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-primary: #d9d9d9;
+    --text-secondary: #a6a6a6;
+    --background: #000000;
+    --divider: #404040;
+    --text-link: #5380ff;
+  }
 }
